@@ -1,4 +1,4 @@
-   Copyright (C) 2019, Free Software Foundation, Inc.
+   Copyright (C) 2019, 2020 Free Software Foundation, Inc.
    
    Copying and distribution of this file, with or without modification,
    are permitted in any medium without royalty provided the copyright
@@ -12,7 +12,7 @@ Changes from 5.0.1 to 5.1.0
 
 2. A number of memory leak issues have been fixed.
 
-3. Infrastructure upgrades: Bison 3.5, Texinfo 6.7, Gettext 0.20.1.
+3. Infrastructure upgrades: Bison 3.5.3, Texinfo 6.7, Gettext 0.20.1.
 
 4. The indexing in the manual has been thoroughly revised, in particular
    making use of the facilities in Texinfo 6.7.  That version (or newer)
