@@ -1,6 +1,8 @@
 2020-03-15         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (zos-diffout): New target.
+	* awkgram.y, command.y: Upgrade to Bison 3.5.3.
+	* NEWS: Updated.
 
 2020-03-11         Arnold D. Robbins     <arnold@skeeve.com>
 
